upgrade to cap 5

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,5 +17,6 @@
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
     <ion-button (click)="loadWasm()">Load WASM</ion-button>
+    <ion-button (click)="loadPdf()">Load PDF</ion-button>
   </div>
 </ion-content>
